--- a/experience.html
+++ b/experience.html
@@ -48,7 +48,7 @@
 
 <div class="xp-title">
   
-<h1 style="padding-top: 6%; text-align: center;"> Experience </h1>
+<h1 style="padding-top: 9%; text-align: center; font-size: 2.3rem;"> Experience </h1>
 
 <button><a href="https://drive.google.com/file/d/1LpCCVP_ed0P5BC576cmmbowrx4C41MZO/view?usp=sharing" target="_blank">Resume</a></button>
 </div>
@@ -62,10 +62,10 @@
   <div class="xp-r1-info">
     <h2>INTEGIRLS</h2>
     <h3> Executive Director (2022-Present)</h3>
-    <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions<span id="dots1">...</span>
+    <p style="font-size: 0.95rem;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions<span id="dots1">...</span>
   <br>
   <br>
-  <span id="more1">As CFO, I manage and monitor central finances & reimbursements, and send out prizes & awards. In addition, I help with sponsorships, and most recently, I helped INTEGIRLS secure $6500 from Jane Street. </span></p>
+  <span id="more1">As Executive Director, I lead a 9-person executive team and 50+ chapter heads across 30+ cities globally. I manage operations, direct strategy, and support local chapters in funding, outreach, and impact. I also handle sponsorships and finances—most recently helping secure $6,500 from Jane Street to support global prizes and resources. </span></p>
   <button onclick="myFunction1()" id="myBtn1">Read More</button>
   </div>
   </div>
@@ -77,10 +77,10 @@
 <div class="xp-r1-info">
   <h2>INTEGIRLS Bay Area </h2>
   <h3> Co-President (2021-Present) </h3>
-  <p style="font-size: 14px;">INTEGIRLS Bay Area is the Bay Area branch of INTEGIRLS, that aims to bridge the gender gap in math by hosting biannual math competitions specifically for female & non-binary individuals, and various other events to foster a community for minorities in math<span id="dots">...</span>
+  <p style="font-size: 0.95rem;">As Co-President of the largest INTEGIRLS chapter, Bay Area, I lead a team of nine, coordinating outreach, problem-writing, sponsorships, ensuring effective coordination through officer meetings and strategic timeline management. I’ve organized 6 large-scale competitions annually, each drawing 250+ participants, and I make sure everything from logistics to problem design runs smoothly and inspires curiosity<span id="dots">...</span>
 <br>
 <br>
-<span id="more"> As Vice President, I help manage the team and make key decisions to continuously improve our organization! </span></p>
+<span id="more"> Beyond events, I run weekly problem-solving nights, interactive games, and coordinate our “Problem of the Week” series to keep the community engaged year-round. </span></p>
 <button onclick="myFunction()" id="myBtn">Read More</button>
 </div>
 </div>
@@ -91,14 +91,29 @@
 </div>
 <div class="xp-r1-info">
   <h2>Women in STEM Granite Bay </h2>
-  <h3> Co-President (2022-Present) </h3>
-  <p style="font-size: 14px;"> Superposition Granite Bay is a chapter of the global nonprofit, Superposition that I co-founded! In this club, we invite guest speakers to inspire and empower females interested in STEM fields<span id="dots2">...</span>
+  <h3> Co-President & Founder (2022-Present) </h3>
+  <p style="font-size: 0.95rem;"> I founded Women in STEM to address the gender gap I saw firsthand in my local community. Starting with just 2 members, I’ve grown the club to 64 active participants and led 22 hands-on workshops, including robotics challenges, dissections, and coding projects. I’ve also hosted 34 speaker events featuring local women in science, technology, and medicine.<span id="dots2">...</span>
   <br>
   <br>
-  <span id="more2">In addition, we host annual mathalons to encourage younger females & non-binary individuals in STEM, and to carry on the goal of minimizing the gender gap in STEM!</span></p>
+  <span id="more2">To expand our impact beyond campus, I launched three outreach programs that introduced STEM to 75+ younger students through free workshops, helping them see that STEM is for everyone. I lead every initiative, from planning events and mentoring members to building partnerships, with the goal of making STEM both accessible and exciting. This work was recognized with the NCWIT Aspirations in Computing Impact Award and a $500 grant, which I used to grow our community reach even further.</span></p>
     <button onclick="myFunction2()" id="myBtn2">Read More</button>
 </div>
 </div>
+
+<div class="xp-r1 navy-bg">
+  <div class="xp-r1-img">
+  <img src="xp-photos/morg.jpg">
+  </div>
+  <div class="xp-r1-info">
+    <h2>Morgan Stanley </h2>
+    <h3> Finance Academy Scholar (2024-Present) </h3>
+    <p style="font-size: 0.95rem;"> As 1 of 120 students selected nationwide, I participated in a five-month program exploring investment banking, corporate finance, and capital markets. Alongside core topics like financial modeling, IPO strategy, and M&A, I engaged in workshops on sustainable finance, entrepreneurship, and financial literacy, learning directly from professionals across the industry.<span id="dots4">...</span>
+    <br>
+    <br>
+    <span id="more4">My team’s pitch as Lead Left Bookrunner placed in the top 4 out of 16, recognized for its user-centric and data-driven approach. With guidance from Morgan Stanley mentors, I strengthened my skills in pricing strategy, market evaluation, and applied finance in a way that was both analytical and action-oriented.</span></p>
+      <button onclick="myFunction4()" id="myBtn4">Read More</button>
+  </div>
+  </div>
 
 <div class="xp-r1 yellow-bg">
 <div class="xp-r1-img">
@@ -107,14 +122,28 @@
 <div class="xp-r1-info">
   <h2>SCS Math Olympiad </h2>
   <h3> Associate Coach (2021-Present) </h3>
-  <p style="font-size: 14px;">Sierra Chinese School’s Math Olympiad is a program to help younger students develop a love for competition math. 
-    I’ve taught both the 6th Grade class and the 8th Grade class, and I’ve taught over 50 students<span id="dots3">...</span>
+  <p style="font-size: 0.95rem;">I teach virtual competition-level math classes to over 60 elementary and middle school students, focusing on advanced problem-solving in algebra, number theory, geometry, and combinatorics. My goal is to make complex concepts approachable and help students grow not just in skill, but in confidence — especially as they prepare for contests like Mathcounts and the AMC series.<span id="dots3">...</span>
     <br>
     <br>
-    <span id="more3">In addition to weekly lessons, I also grade the homework and host weekly study halls for homework help!</span></p>
+    <span id="more3">In addition to teaching, I lead weekly study halls, grade and design assignments, and provide tailored feedback to reinforce understanding. I also mentor 5 teaching assistants, helping them create a learning space that balances rigor with encouragement — where students feel challenged, supported, and excited to keep learning.</span></p>
     <button onclick="myFunction3()" id="myBtn3">Read More</button>
 </div>
 </div>
+
+<div class="xp-r1 green-bg">
+  <div class="xp-r1-img">
+  <img src="xp-photos/tennis.jpg">
+  </div>
+  <div class="xp-r1-info">
+    <h2>Granite Bay Girls Varsity Tennis </h2>
+    <h3> Co-Captain (2023-2025) </h3>
+    <p style="font-size: 0.95rem;"> I led a 17-member varsity team, designing strategic training programs that enhanced player performance. Competing at #4 singles, I secured an undefeated 11-0 record in Division I matches, playing a pivotal role in our team’s victory as 2024 Section Champions<span id="dots5">...</span>
+    <br>
+    <br>
+    <span id="more5">Additionally, I managed our team’s digital infrastructure, including the official team website (200+ monthly visitors) and spearheaded fundraising efforts that raised over $40,000, ensuring financial sustainability for training and travel. My leadership was recognized with the 2023 MVP Award for outstanding athletic and managerial contributions.</span></p>
+      <button onclick="myFunction5()" id="myBtn5">Read More</button>
+  </div>
+  </div>
 
   
 </div>
