--- a/phia.html
+++ b/phia.html
@@ -323,7 +323,7 @@
           <div class="swiper-slide">
             <div class="slide-content">
               <img src="rl.jpeg" alt="Ralph Lauren bear sweater">
-              <p><strong>Ralph Lauren bear sweater</strong> – $85 on Poshmark (retails at $398). A sweater softer and warmer than most people I know.</p>
+              <p><strong>Ralph Lauren bear sweater</strong> – $85 on Poshmark (retails at $398). The bear and I are thriving. </p>
             </div>
           </div>
 
