--- a/experience.html
+++ b/experience.html
@@ -87,7 +87,7 @@
 
 <div class="xp-r1 blurple-bg">
 <div class="xp-r1-img">
-<img src="xp-photos/superpos3.jpg">
+<img src="xp-photos/wistem.jpeg">
 </div>
 <div class="xp-r1-info">
   <h2>Women in STEM Granite Bay </h2>
