--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
   </div>
     <div class="profile-img">
-    <img src="pfp_FR-modified.png" style="width:70%;">
+    <img src="about-me/pfp.png" style="width:70%;">
   </div>
   </div>
 
