--- a/phia.html
+++ b/phia.html
@@ -310,19 +310,19 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="burbskirt.jpeg" alt="Burberry plaid mini skirt">
+              <img src="/photos/burbskirt.jpeg" alt="Burberry plaid mini skirt">
               <p><strong>Burberry plaid mini skirt</strong> – $120 on Poshmark. Still waiting for Vogue to call.</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="burberrytrench.jpeg" alt="Vintage Burberry trench coat">
+              <img src="photos/burberrytrench.jpeg" alt="Vintage Burberry trench coat">
               <p><strong>Vintage Burberry trench coat</strong> – $130 on Mercari Japan. Timeless, dramatic, and the reason I check the weather hoping for rain.</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
-              <img src="rl.jpeg" alt="Ralph Lauren bear sweater">
+              <img src="photos/rl.jpeg" alt="Ralph Lauren bear sweater">
               <p><strong>Ralph Lauren bear sweater</strong> – $85 on Poshmark (retails at $398). The bear and I are thriving. </p>
             </div>
           </div>
