--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
 
 <div class="row1">
   <div class="row1-1" style="text-align: center;">
-    <img class="pink-border" src="medisign_mp.png">
+    <img class="pink-border" src="portfolio/medisign_mp.png">
     <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> MediSign </h3>  
     <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
     <h4> <span class="hc">HTML & CSS</span> <span class="js">Javascript</span><span class="aiml">AI & ML</span></h4>
@@ -139,7 +139,7 @@
 
 <div class="row1">
   <div class="row1-1" style="text-align: center;">
-  <img src="my_trajectry.gif">
+  <img src="portfolio/my_trajectry.gif">
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> X-Plane 11 Autonomous Takeoff </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2022 </h4>
   <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
@@ -170,7 +170,7 @@
 </div>
 
 <div class="row1-2" style="text-align: center;">
-<video autoplay loop muted src="elvid2.mov">
+<video autoplay loop muted src="portfolio/elvid2.mov">
   <img src="portfolio/estee-lauder.png">
 </video> 
 <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Estée Lauder </h3>  
