--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 As a self-taught developer and designer, I’ve shaped my skills through hands-on projects, classes & programs, and relentless curiosity, enabling me 
 to bring ideas to life from concept to completion. 
 
-I’m deeply committed to empowering girls in STEM fields, which has led me to found and lead the Women in STEM club, where I design and develop programs that inspire the next generation of female leaders. In my role as Executive Director of INTEGIRLS, I organize math competitions and puzzle hunts for girls and non-binary students, fostering an inclusive community that encourages collaboration and creativity. Whether coding a new app, designing graphics, developing a strategy, or leading a team, I am driven by the belief that technology can be a powerful force for equity and change.
+I’m deeply committed to empowering underrepresented genders in STEM fields, which has led me to found and lead the Women in STEM club, where I design and develop programs that inspire the next generation of female leaders. In my role as Executive Director of INTEGIRLS, I organize math competitions and puzzle hunts for girls and non-binary students, fostering an inclusive community that encourages collaboration and creativity. Whether coding a new app, designing graphics, developing a strategy, or leading a team, I am driven by the belief that technology can be a powerful force for equity and change.
   </p>
   <br>
 
