--- a/phia.html
+++ b/phia.html
@@ -275,7 +275,7 @@
       <ul>
         <li><strong>Front-End Expertise:</strong> Skilled in HTML/CSS, JavaScript, and React, with a strong eye for design and responsiveness.</li>
         <li><strong>iOS Engineering:</strong>  Proficient in Swift, Xcode, and SwiftUI. I’ve also explored Kotlin and Flutter to prototype cross-platform features when needed.</li>
-        <li><strong>AI Integration:</strong> Comfortable integrating ML libraries and APIs to power smarter, more dynamic functionalities to user-facing tools.</li>
+        <li><strong>Human-Centered Design:</strong> Having interned at the <a href="https://www.media.mit.edu/groups/fluid-interfaces/overview/">Fluid Interfaces Group @ MIT's Media Lab</a>, I have experience creating technical platofrms that adapt to the user, not the other way around.</li>
         <li><strong>Builder Mentality:</strong> I’m never satisfied with “good enough.” I revisit, rebuild, and reimagine until the product feels just right.</li>
       </ul>
     </section>
@@ -297,15 +297,6 @@
         </div>
       </div>
     </section>
-    <section>
-      <h3>How I Fit Phia's Needs</h3>
-      <ul style="list-style: none; padding-left: 0; display: flex; flex-direction: column; gap: 1rem;">
-        <li>✅ <strong>Willingness to work 6 days a week:</strong> I’m eager to commit deeply to a fast-paced, high-growth environment and contribute meaningfully to Phia’s next milestones.</li>
-        <li>✅ <strong>Side Projects:</strong> I've independently developed many projects including Reflexion, a multimodal journaling app, and NutrifyAI, a food recognition and recommendation system, MediSign, and more, which highlight my ability to take ideas from concept to execution.</li>
-        <li>✅ <strong>User-Centric Approach:</strong> My design process centers around accessibility and inclusivity, with careful attention to visual polish and intuitive user experience. I iterate quickly based on real user feedback.</li>
-        <li>✅ <strong>Experience & Education:</strong> As an incoming MIT student majoring in Computer Science, Economics, & Data Science, I bring extensive front-end development experience, along with growing backend familiarity and strong design instincts.</li>
-      </ul>
-    </section>
     <section style="background-color: #ecf6ff">
       <h3>Let’s Build Together :)</h3>
       <p>
@@ -321,19 +312,19 @@
           <div class="swiper-slide">
             <div class="slide-content">
               <img src="/photos/burbskirt.jpeg" alt="Burberry plaid mini skirt">
-              <p><strong>Burberry plaid mini skirt</strong> – $120 on Poshmark. Still waiting for Vogue to call.</p>
+              <p><strong>Burberry plaid mini skirt</strong> – $120 on Poshmark.</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
               <img src="photos/burberrytrench.jpeg" alt="Vintage Burberry trench coat">
-              <p><strong>Vintage Burberry trench coat</strong> – $130 on Mercari Japan. Timeless, dramatic, and the reason I check the weather hoping for rain.</p>
+              <p><strong>Vintage Burberry trench coat</strong> – $130 on Mercari Japan. </p>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="slide-content">
               <img src="photos/rl.jpeg" alt="Ralph Lauren bear sweater">
-              <p><strong>Ralph Lauren bear sweater</strong> – $85 on Poshmark (retails at $398). The bear and I are thriving. </p>
+              <p><strong>Ralph Lauren bear sweater</strong> – $85 on Poshmark (retails at $398). </p>
             </div>
           </div>
 
