--- a/phia.html
+++ b/phia.html
@@ -311,6 +311,12 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="slide-content">
+              <img src="/photos/chanel.jpg" alt="Chanel mini classic flap">
+              <p><strong>Chanel quilted mini square single flap in beige lambskin</strong> – $650 on Mercari Japan.</p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-content">
               <img src="/photos/burbskirt.jpeg" alt="Burberry plaid mini skirt">
               <p><strong>Burberry plaid mini skirt</strong> – $120 on Poshmark.</p>
             </div>
