--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="start">
   <h2> Hi! I'm Michelle 👋 </h2>
   <h1>I <span class="htxt-orange">code</span>, <span class="htxt-blue">design</span>, <br> <span class="htxt htxt-pink">develop</span>, & <span class="htxt htxt-coral">lead</span>.</h1>
-  <h3> Incoming freshman @ MIT studying <span class="burg">Computer Science, Economics, & Data Science</span> — busy stitching ideas into interfaces that speak!  </h3>
+  <h3> Incoming freshman @ MIT studying <span class="burg">Computer Science, Economics, & Data Science</span>  </h3>
   <button class="start-btn1"> <a style="text-decoration: none;" href="contact.html">Contact Me </a> </button>
   <button class="start-btn2"> <a style="text-decoration: none;" href="portfolio.html"> <i class="fa-solid fa-arrow-up-right-from-square"></i>  Porfolio</a></button>
     <div class="footnote box1">
